feat: 新建查询模板功能优化

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/basic-info/basic-info.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/basic-info/basic-info.scss
@@ -25,13 +25,8 @@
 
     .bk-tag-input {
       .tag {
-        .tag-name {
-          vertical-align: middle;
-        }
-
-        .icon-monitor {
-          vertical-align: middle;
-        }
+        display: flex;
+        align-items: center;
       }
     }
   }
