--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/create/template-create.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/create/template-create.scss
@@ -28,7 +28,7 @@
 
     .template-steps {
       max-width: 338px;
-      margin: 0 auto;
+      margin: 0 50% 0 auto;
 
       .bk-step {
         .bk-step-number {
