--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/condition/create-condition-variable.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/condition/create-condition-variable.scss
@@ -3,4 +3,10 @@
     line-height: normal;
     border: none;
   }
+
+  .default-value-form-item {
+    .bk-label-text {
+      line-height: 50px;
+    }
+  }
 }
