--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-view/query-template-view.scss
@@ -61,4 +61,12 @@
       }
     }
   }
+
+  
+  .variable-tag-active {
+    padding: 3px 6px;
+    background: #e1ecff;
+    border: 1px solid #3a84ff;
+    border-radius: 2px;
+  }
 }
