feat: 查询模板开发33

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-table/query-template-table.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-table/query-template-table.scss
@@ -34,6 +34,13 @@
       cursor: pointer;
     }
 
+    .relation-count-col {
+      .loading-svg {
+        width: 16px;
+        height: 16px;
+      }
+    }
+
     .operator-col {
       display: flex;
       column-gap: 16px;
