--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
@@ -2,9 +2,6 @@
   background: #fff;
 
   .variable-panel-header {
-    display: flex;
-    align-items: center;
-
     .variable-type-title {
       display: inline-block;
       height: 30px;
@@ -16,26 +13,78 @@
       background: #929eb6;
       border-radius: 2px 0 8px;
     }
+  }
 
-    .icon-mc-delete-line {
-      display: none;
-      margin-right: 7.5px;
-      margin-left: auto;
-      font-size: 13px;
-      color: #ea3636;
-      cursor: pointer;
+  .tag-list {
+    display: flex;
+    flex-wrap: wrap;
 
-      &.disabled {
-        color: #dcdee5;
-        cursor: not-allowed;
+    .tag-item {
+      height: 22px;
+      padding: 0 4px;
+      margin-top: 2px;
+      font-size: 12px;
+      line-height: 22px;
+      color: #4d4f56;
+      background: #f0f1f5;
+      border-radius: 2px;
+
+      & + .tag-item {
+        margin-left: 2px;
       }
     }
   }
 
-  &:hover {
-    .variable-panel-header {
-      .icon-mc-delete-line {
-        display: block;
+  .condition-tag {
+    display: inline-block;
+    height: 40px;
+    padding: 4px;
+    background: #f0f1f5;
+    border-radius: 2px;
+
+    &+.condition-tag {
+      margin-left: 4px;
+    }
+
+    .key-wrap {
+      display: flex;
+      align-items: center;
+      padding-right: 42px;
+      font-size: 12px;
+      line-height: 14px;
+      
+      .key-name {
+        color: #757880;
+      }
+
+      .key-method {
+        margin-left: 2px;
+        color: #3a84ff;
+
+        &.exclude,
+        &.ne {
+          color: #ea3636;
+        }
+      }
+    }
+
+    .value-wrap {
+      margin-top: 2px;
+      font-size: 12px;
+      line-height: 16px;
+      color: #313238;
+
+      .value-condition {
+        margin: 0 4px;
+        font-family: RobotoMono-Medium, Menlo, Monaco, Consolas, 'Courier New', monospace;
+        font-weight: 500;
+        color: #f59500;
+      }
+
+      .value-name {
+        font-family: RobotoMono-Regular, Menlo, Monaco, Consolas, 'Courier New', monospace;
+        font-weight: 400;
+        color: #313238;
       }
     }
   }
@@ -48,6 +97,25 @@
       margin-top: 12px;
     }
 
+    .variable-panel-header {
+      display: flex;
+      align-items: center;
+
+      .icon-mc-delete-line {
+        display: none;
+        margin-right: 7.5px;
+        margin-left: auto;
+        font-size: 13px;
+        color: #ea3636;
+        cursor: pointer;
+
+        &.disabled {
+          color: #dcdee5;
+          cursor: not-allowed;
+        }
+      }
+    }
+
     .variable-form {
       padding: 0 16px;
     }
@@ -55,6 +123,8 @@
 
   &.detail {
     display: flex;
+    border: 1px solid #dcdee5;
+    border-radius: 2px;
 
     & + .variable-panel {
       margin-top: 8px;
@@ -67,24 +137,14 @@
     .variable-form {
       padding: 6px 0;
     }
+  }
 
-    .tag-list {
+  &:hover {
+    .variable-panel-header {
       display: flex;
-      flex-wrap: wrap;
 
-      .tag-item {
-        height: 22px;
-        padding: 0 4px;
-        margin-top: 2px;
-        font-size: 12px;
-        line-height: 22px;
-        color: #4d4f56;
-        background: #f0f1f5;
-        border-radius: 2px;
-
-        & + .tag-item {
-          margin-left: 2px;
-        }
+      .icon-mc-delete-line {
+        display: block;
       }
     }
   }
