--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/detail/components/config-panel.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/detail/components/config-panel.scss
@@ -28,7 +28,7 @@
       display: flex;
       flex-direction: column;
       row-gap: 12px;
-      padding: 16px 8px 24px;
+      padding: 16px 8px 0;
 
       .info-item {
         display: flex;
