--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-config/query-config-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-config/query-config-creator.scss
@@ -12,8 +12,9 @@
     height: 100%;
     margin-right: 3px;
     font-size: 12px;
-    color: #3A84FF;
-    background: #F5F7FA;
+    font-weight: 700;
+    color: #3a84ff;
+    background: #f5f7fa;
   }
 
   .query-config-wrap {
