feat: 日志管理 - 采集接入重构-列表页

--- a/bklog/web/src/views/manage-v2/log-collection/components/list-main/left-list.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/list-main/left-list.scss
@@ -48,3 +48,11 @@
     }
   }
 }
+.tippy-box[data-theme~='add-index-set-popover'] {
+  .tippy-content {
+    padding: 0;
+  }
+  .tippy-arrow {
+    color: #fff;
+  }
+}
