--- a/bklog/web/src/views/manage-v2/log-collection/components/list-main/list-item.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/list-main/list-item.scss
@@ -1,3 +1,5 @@
+@import 'tippy.js/dist/tippy.css';
+
 .group-item-info {
   position: relative;
   &:hover,
@@ -138,6 +140,13 @@
 .tippy-box[data-theme~='group-item-edit-panel'],
 .tippy-box[data-theme~='group-item-del-panel'] {
   width: 305px;
+  background-color: #fff;
+  .tippy-content {
+    padding: 0;
+  }
+  .tippy-arrow {
+    color: #fff;
+  }
   .mr8 {
     margin-right: 8px;
   }
@@ -150,14 +159,10 @@
     padding: 8px 0;
     text-align: right;
   }
-  .tippy-content {
-    padding: 12px 16px 16px;
-  }
   .popover-del-index-set {
     background: #fff;
     box-shadow: 0 2px 6px 0 #0000001a;
     border-radius: 2px;
-    width: 280px;
     padding: 16px 16px 8px;
     font-size: 12px;
     color: #4d4f56;
