--- a/bklog/web/src/components/rule-table/index.scss
+++ b/bklog/web/src/components/rule-table/index.scss
@@ -15,7 +15,7 @@
     justify-content: space-between;
 
     &:hover {
-      background: #eaf3ff;
+      background: #f0f1f5;
       transition: background 0.2s linear;
     }
 
