--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/top-operation/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/top-operation/index.scss
@@ -26,7 +26,9 @@
 
     .bk-tag {
       margin: 0 4px 0 0;
+      background: #fafbfd;
+      border: 1px solid #dcdee5;
+      color: #4d4f56;
     }
-    // margin: 0 0 16px -6px;
   }
 }
