--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/main-header/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/main-header/index.scss
@@ -1,6 +1,8 @@
 .log-table-header-main-wraper {
   width: 100%;
   overflow-x: hidden;
+  box-shadow: 0 2px 4px 0 #00000014;
+  z-index: 1;
 
   .log-table-header-main {
     width: 100%;
@@ -10,19 +12,18 @@
     scrollbar-gutter: stable;
     position: relative;
 
-    thead {
-      margin: 0 12px;
-    }
-
     tr {
       height: 36px;
       text-align: left;
       font-size: 12px;
-      color: #313238;
+      color: #383134;
 
       th {
         cursor: pointer;
-        padding-left: 8px;
+        padding-left: 12px;
+        font-family: PingFangSC;
+        font-weight: 600;
+
         &:hover {
           background: #f0f1f5;
         }
