--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/top-operation/cluster-config/edit-config/rule-operate/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/top-operation/cluster-config/edit-config/rule-operate/index.scss
@@ -18,6 +18,10 @@
       gap: 8px;
       align-items: center;
       justify-content: flex-end;
+
+      .operate-btn {
+        font-size: 12px;
+      }
     }
 
     .template-operate-main {
