--- a/bklog/web/src/views/retrieve-v3/search-result/template-manage/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/template-manage/index.scss
@@ -55,6 +55,7 @@
             font-size: 14px;
 
             .title {
+              font-weight: 700;
               color: #313238;
             }
 
@@ -78,6 +79,13 @@
             .operate-btns {
               display: flex;
               gap: 8px;
+
+              .operate-btn {
+                font-size: 12px;
+                color: #4d4f56;
+                width: 60px;
+                min-width: 60px;
+              }
             }
           }
         }
