fix: 日志聚类测试问题修复 --Bug=146994949 # Reviewed, transaction id: 55519

--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/index.scss
@@ -216,7 +216,7 @@
               .user-selector-container {
                 background: transparent !important;
                 border: none !important;
-                min-height: 26px;
+                padding: 0;
 
                 &.focus {
                   border: 1px solid #3a84ff !important;
