--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-set/query-template-set.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-set/query-template-set.scss
@@ -16,21 +16,27 @@
       padding: 0 16px;
       margin-top: 32px;
 
-      &.sticky {
-        position: sticky;
-        bottom: 0;
-        padding: 8px 16px;
-        margin-top: 0;
-        background: #fff;
-        box-shadow: 0 -2px 4px 0 #0000001f;
-      }
-
       .bk-button {
         width: 88px;
 
         & + .bk-button {
           margin-left: 8px;
         }
+      }
+    }
+
+    &.sticky {
+      .create-content-wrap {
+        padding: 16px 16px 24px;
+      }
+
+      .submit-btns {
+        position: sticky;
+        bottom: 0;
+        padding: 8px 16px;
+        margin-top: 0;
+        background: #fff;
+        box-shadow: 0 -2px 4px 0 #0000001f;
       }
     }
   }
