--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/variable-panel/variable-panel.scss
@@ -126,6 +126,10 @@
     border: 1px solid #dcdee5;
     border-radius: 2px;
 
+    .variable-panel-header {
+      flex-shrink: 0;
+    }
+
     & + .variable-panel {
       margin-top: 8px;
     }
