--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-template.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-template.scss
@@ -1,9 +1,8 @@
 .query-template {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
-  padding: 16px 18px 16px 16px;
+  height: calc(100% - 32px);
+  margin: 16px 18px 16px 16px;
   background-color: #fff;
   background-clip: content-box;
   border-radius: 2px;
