feat: 查询模板开发 # Reviewed, transaction id: 55578

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-table/query-template-table.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/query-template-table/query-template-table.scss
@@ -22,6 +22,12 @@
           padding-right: calc(15px + 20px);
         }
       }
+
+      .cell {
+        &:has(.click-show-slicer-col) {
+          color: #3a84ff;
+        }
+      }
     }
 
     /* stylelint-disable-next-line no-descending-specificity */
