fix: 日志聚类测试问题修复 --Bug=146994949 # Reviewed, transaction id: 55673

--- a/bklog/web/src/components/rule-table/index.scss
+++ b/bklog/web/src/components/rule-table/index.scss
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: #313238;
 
     &:hover {
       background: #f0f1f5;
@@ -54,6 +55,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: #4d4f56;
 
     &:hover {
       background-color: #f0f1f5;
