--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/cluster-popover/regex-match/regex-table/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/cluster-popover/regex-match/regex-table/index.scss
@@ -66,10 +66,14 @@
           }
         }
 
-        .regex-column {
-        }
+        .input-column {
+          .bk-tooltip {
+            width: 100%;
 
-        .occupy-column {
+            .bk-tooltip-ref {
+              width: 100%;
+            }
+          }
         }
 
         .action-column {
