--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/top-operation/quick-filter/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/top-operation/quick-filter/index.scss
@@ -7,6 +7,11 @@
   font-size: 12px;
   line-height: 24px;
 
+  .new-class-checkbox {
+    height: 28px;
+    line-height: 28px;
+  }
+
   .bk-checkbox-text {
     color: #4d4f56;
   }
