--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/index.scss
@@ -117,6 +117,13 @@
         td {
           padding-left: 12px;
 
+          .dynamic-column {
+            width: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+
           .signature-box {
             padding-right: 12px;
             width: 100%;
@@ -229,6 +236,7 @@
               }
             }
           }
+
           .create-strategy-main {
             padding-left: 8px;
 
