--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-chart/query-chart.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-chart/query-chart.scss
@@ -1,4 +1,5 @@
 .query-chart {
+  position: relative;
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -28,10 +29,35 @@
     .query-timerange {
       margin-left: 24px;
     }
+
+    .refresh-btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      margin-left: 6px;
+      color: #313238;
+
+      &:hover {
+        font-weight: 700;
+        color: #3a84ff;
+        cursor: pointer;
+      }
+    }
   }
 
   &-content {
     flex: 1;
     width: 100%;
+  }
+
+  .query-chart-skeleton {
+    position: absolute;
+    inset: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    background-color: white;
   }
 }
