feat: 查询模版配置功能优化

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/variable-name-input.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/utils/variable-name-input.scss
@@ -47,6 +47,10 @@
           border: 1px solid #C4C6CC !important;
 
         }
+
+        &::placeholder {
+          font-weight: 400;
+        }
       }
     }
   }
