--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/kv-tag.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/kv-tag.scss
@@ -32,7 +32,9 @@
         color: #3a84ff;
 
         &.exclude,
-        &.ne {
+        &.ne,
+        &.neq,
+        &.nreg {
           color: #ea3636;
         }
       }
