--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/value-options.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/value-options.scss
@@ -1,5 +1,7 @@
+/* stylelint-disable selector-class-pattern */
+
 /* stylelint-disable declaration-no-important */
-.retrieval-filter__value-options-select-component {
+.template-config__value-options-select-component {
   .options-drop-down-wrap {
     position: absolute;
     top: calc(100% + 4px);
@@ -8,10 +10,10 @@
     width: 100%;
     max-height: 140px !important;
     overflow-y: auto;
-    background: #ffffff;
+    background: #fff;
     border: 1px solid #dcdee5;
     border-radius: 2px;
-    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1019607843);
+    box-shadow: 0 2px 6px 0 rgb(0 0 0 / 10.2%);
 
     &.no-border {
       border: none;
@@ -55,10 +57,10 @@
       height: 32px;
       padding: 0 8px;
       overflow: hidden;
+      text-overflow: ellipsis;
       font-size: 12px;
       line-height: 32px;
       color: #4d4f56;
-      text-overflow: ellipsis;
       white-space: nowrap;
       cursor: pointer;
 
@@ -105,6 +107,7 @@
       color: #63656e;
       text-align: center;
     }
+
     .add-var-name-left {
       margin-left: 0;
     }
