feat: 查询模板-预览模板条件元素符中文翻译 # Reviewed, transaction id: 56021

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/condition-detail-kv-tag.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/condition/condition-detail-kv-tag.scss
@@ -23,6 +23,13 @@
       .key-method {
         margin-left: 2px;
         color: #979ba5;
+
+        &.exclude,
+        &.ne,
+        &.neq,
+        &.nreg {
+          color: #ea3636;
+        }
       }
     }
 
