--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/method/method-creator.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/components/method/method-creator.scss
@@ -38,14 +38,26 @@
     height: 32px;
     cursor: pointer;
 
-    &:hover {
-      background: #F5F7FA;
-    }
-
     .options-item-name {
       margin-left: 12px;
       font-size: 12px;
       color: #4D4F56;
+    }
+
+    &.checked{
+      background-color: #f4f6fa;
+
+      .options-item-name {
+        color: #3A84FF;
+      }
+    }
+
+    &:hover {
+      background: #F5F7FA;
+
+      .options-item-name {
+        color: #3A84FF;
+      }
     }
   }
 }
