feat: 日志管理 - 采集接入重构-新建采集项静态

--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/cluster-table.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/cluster-table.scss
@@ -63,4 +63,16 @@
       }
     }
   }
+  .cluster-content-empty {
+    height: 200px;
+    margin-top: 12px;
+    .part-text {
+      font-size: 12px;
+    }
+    .text-wrap {
+      margin-top: 10px;
+      color: #3a84ff;
+      cursor: pointer;
+    }
+  }
 }
