feat: 查询模板优化 # Reviewed, transaction id: 56073

--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-template.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/query-template.scss
@@ -16,7 +16,7 @@
     height: 64px;
     padding: 0 16px;
 
-    .search-input {
+    .query-template-header-search {
       width: 480px;
     }
   }
