--- a/bklog/web/src/views/manage-v2/log-collection/components/create-operation/step2-custom-report.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/create-operation/step2-custom-report.scss
@@ -4,6 +4,11 @@
   .w-45 {
     width: 45%;
   }
+  .base-info-box {
+    .bk-form-item {
+      width: 45%;
+    }
+  }
   .bk-button-group {
     .bk-button {
       width: 120px;
