--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/add-index-set.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/add-index-set.scss
@@ -1,3 +1,45 @@
+.add-index-set-box {
+  width: 100%;
+  .add-index-set-input-main {
+    width: 100%;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    .bk-form {
+      width: 100%;
+      .bk-form-content {
+        margin-left: 0 !important;
+      }
+    }
+    .icon-btns {
+      display: flex;
+      align-items: center;
+    }
+    .submit-icon, .close-icon {
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      line-height: 24px;
+      font-size: 14px;
+      text-align: center;
+      background: #FFFFFF;
+      border: 1px solid #C4C6CC;
+      border-radius: 2px; 
+    }
+    .submit-icon {
+      color: #299e56;
+      font-weight: 700;
+      margin: 0 10px;
+      cursor: pointer;
+    }
+    .close-icon {
+      color: #e71818;
+      font-weight: 700;
+      cursor: pointer;
+    }
+  }
+}
+
 .popover-add-index-set {
   background: #fff;
   box-shadow: 0 2px 6px 0 #0000001a;
